kubernetes/chat-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-vs
spec:
  hosts:
  - "*"
  gateways:
  - chat-gateway
  http:
  - match:
    - headers:
        x-user-group:
          exact: beta
    route:
    - destination:
        host: chat-service-v2
        subset: v2
      weight: 100
  - route:
    - destination:
        host: chat-service-v1
        subset: v1
      weight: 100
